# LearnOpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
glad/include/glad/: glad.h
src/: camera.cpp  camera.h  constants.h  glad.c  main.cpp  shader.cpp  shader.h  shaders.h
src/shaders/fragment/: magenta.fs  orange.glsl  texture.frag  yellow.fs
src/shaders/vertex/: vertex.glsl  vertex.vs
